Fixing title of info page

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -5,7 +5,7 @@ License & terms of use: http://www.unicode.org/copyright.html#License
 <!DOCTYPE html>
 <head>
 	<meta charset="utf-8"/>
-	<title>My Web Page</title>
+	<title>GitHub/Jira Check <%= jiraInfo.issueKey ? ":" + jiraInfo.issueKey : "" %></title>
 	<style type="text/css">
 	<%
 	var color = jiraInfo.pass ? "#49AB4D" : "#D13B3B";
