--- a/views/squash.ejs
+++ b/views/squash.ejs
@@ -24,6 +24,9 @@ License & terms of use: http://www.unicode.org/copyright.html#License
 		padding: 10px;
 		position: relative;
 	}
+	button, input[type="submit"] {
+		cursor: pointer;
+	}
 	#title-input {
 		display: inline-block;
 		font-size: 1.2em;
@@ -36,9 +39,6 @@ License & terms of use: http://www.unicode.org/copyright.html#License
 	}
 	.error {
 		color: #D13B3B;
-	}
-	button {
-		cursor: pointer;
 	}
 	#working {
 		height: 50px;
