Make squash function more discoverable. Fixes #20

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -26,6 +26,7 @@ License & terms of use: http://www.unicode.org/copyright.html#License
 	}
 	button, input[type="submit"] {
 		cursor: pointer;
+		font-size: 1.3em;
 	}
 	.verdict {
 		font-weight: bold;
